--- a/e-assistant/app/assets/stylesheets/application.css
+++ b/e-assistant/app/assets/stylesheets/application.css
@@ -1,3 +1,9 @@
+/*
+ *= require fullcalendar
+ *= require_tree .
+ *= require_self
+ */
+
 body, html {
     height: 100%;
     margin: 0;
@@ -183,8 +189,8 @@ span.psw {
 /*Attension 用のcss*/
 .flash {
   padding: 5px 0;
-  color: white;
-  background: rgb(251, 170, 88);
+  color: blue;
+  /*background: rgb(251, 170, 88);*/
   text-align: center;
   position: absolute;
   /*top: 30px;*/
