--- a/e-assistant/app/views/home/login.html.erb
+++ b/e-assistant/app/views/home/login.html.erb
@@ -13,7 +13,7 @@
             <div class="login-container">
                 <label for="uname"><b>ログイン名</b></label>
                 <input type="text" placeholder="" name="user_id" required><br><br>
-                <label for="pass"><b>パスワード</b></label>
+                <label for="password"><b>パスワード</b></label>
                 <input type="password" placehodler="" name="password" required><br><br>
                 <button type="submit">ログイン</button><br>
                 <label><input type="checkbox" checked="checked" name="remember">ログインしたままにする</label><br>
