--- a/e-assistant/app/assets/stylesheets/application.css
+++ b/e-assistant/app/assets/stylesheets/application.css
@@ -186,7 +186,7 @@ span.psw {
     }
 }
 
-/*Attension 用のcss*/
+/*メッセージ用のcss*/
 .flash {
   padding: 5px 0;
   color: blue;
@@ -194,7 +194,7 @@ span.psw {
   text-align: center;
   position: absolute;
   /*top: 30px;*/
-  *z-index: 10;
+  z-index: 10000;
   width: 100%;
   border-radius: 0 0 2px 2px;
   font-size: 14px;
@@ -230,7 +230,7 @@ span.psw {
     border-radius: 50%;
     height: 100px;
     width: 100px;
-    position: absolute; /*fixedからabsoluteに変更*/ 
+    position: absolute; /*fixedからabsoluteに変更*/
     float: left;
     color: whitesmoke;
     text-align: center;
@@ -409,6 +409,12 @@ span.psw {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+}
+
+/*エラーメッセージ*/
+.form-error{
+  color: red;
+  text-align: center;
 }
 /*
 .background {
