--- a/e-assistant/app/views/users/edit_form.html.erb
+++ b/e-assistant/app/views/users/edit_form.html.erb
@@ -26,8 +26,7 @@
   </div>
 
   <div class="main-container">
-
-
+    <div id="user-info-edit" >
       <%= form_tag("/users/#{@user.id}/update", {multipart: true}) do %>
       <div class="info-container">
         <!-- <button>Upload new photo</button> -->
@@ -43,19 +42,18 @@
         <label for="password_confirmation"><b>もう一回パスワード</b></label>
         <input type="password" placehodler="" name="password_confirmation" required><br><br>
         <label for="email"><b>新メールアドレス</b></label>
-        <input type="text" placeholder="" name="email" value="<%= @user.email %>" required><br><br>
+        <input type="text" placeholder="" name="email" value="<%= @user.email %>"required><br><br>
         <label for="image"><b>プロフィール画像</b></label>
-        <input type="file" name="image">
-        <label for="submit"><b>更新</b></label>
-        <input type="submit" value="更新">
+        <input type="file" name="image"><br><br>
+        <input class="submit-button" type="submit" value="更新">
+
       </div>
       <% end %>
-      <div class="tab">
+      <div class="hidden">
         <button class="tablinks" onclick="openTab(event, 'user-info')"　type=submit id="defaultOpen">更新</button>
       </div>
 
-
-
+    </div>
   </div>
   <script>
   function openTab(evt, tabName) {
