タスクの追加

--- a/e-assistant/app/views/users/_form.html.erb
+++ b/e-assistant/app/views/users/_form.html.erb
@@ -29,7 +29,7 @@
 
   <div class="field" id="task-color">
     <%= form.label :color %>
-    <%= form.text_field :color, id: :event_color %>
+    <%= form.color_field :color, id: :event_color %>
   </div>
 
   <div class="field">
