--- a/e-assistant/app/views/users/show.html.erb
+++ b/e-assistant/app/views/users/show.html.erb
@@ -59,7 +59,7 @@
             <input type="time" name="deadline_time">
 
             <label for="required_time"><b>かかる時間</b></label>
-            <input type="text" placeholder="Enter required time" name="required_time" required>
+            <input type="time" placeholder="Enter required time" name="required_time" required>
 
             <label for="priority"><b>優先度</b></label>
             <input type="text" placeholder=" ボタンに変更" name="priority" required>
