--- a/app/views/events/_new.html.erb
+++ b/app/views/events/_new.html.erb
@@ -1,5 +1,5 @@
 <div id="id02" class="modal">
-  <span onclick="document.getElementById('id02').style.display='none'"
+  <span onclick="document.getElementById('id02').remove()"
           class="close" title="Close Modal">&times;</span>
   <div class="modal-content animate">
     <div class="container">
