[update]カレンダーから呼び出すフォーム要素をclass="tooltip" => id="calendar-form"変更

--- a/app/views/events/edit.js.erb
+++ b/app/views/events/edit.js.erb
@@ -1,5 +1,5 @@
-$('.tooltip').html("<%= j (render 'edit') %>");
+$('#calendar-form').html("<%= j (render 'edit') %>");
 $('#id02').fadeIn(400);
 $('#id02').on('ajax:success', function() {
-    $('.tooltip').empty();
+    $('#calendar-form').html('');
 });
