--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,4 +1,4 @@
-<div id="event_calendar"></div>
+<div id="calendar"></div>
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'"
           class="close" id="id01-close" title="Close Modal">&times;</span>
