--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="calendar-container">
-      <div id="event_calendar"></div>
+      <div id="calendar"></div>
       <div id="id02" class="modal">
         <span onclick="document.getElementById('id02').style.display='none'"
         class="close" id="id02-close" title="Close Modal">&times;</span>
