--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,10 +13,8 @@
   <div class="top-bar">
     <%= link_to("e-Assistant", "/")%>
     <div class="userID">
+      <%= link_to("タスク一覧", "/tasks")%>
       Welcome back,
-      <% if @current_user.id %>
-      <%= @current_user.id %>
-      <% end %>
       <div class="tooltip">
         <a href="<%= "/users/#{@user.id}/edit"%>"><img src="/img/button-setting.png" alt="User setting" width="15" height="15"><%= @user.user_id%>!</a>
         <div class="tooltiptext">
@@ -34,7 +32,7 @@
     <% end %>
 
     <div class="square">
-      現在のタスクは「タスク名」である。<br>
+      現在のタスクは「タスク名」です。<br>
       残り時間：... <br>
       <%= @user.user_id%>さん、頑張ってください！
     </div>
@@ -42,40 +40,10 @@
       今日のスケジュール
     </div>
     <div class="tooltip">
-      <button onclick="document.getElementById('id01').style.display='block'">新タスク</button>
-
+      <button onclick="document.getElementById('id05').style.display='block'"><%= link_to 'タスク追加', new_task_path, remote: true %></button>
+      <div id="task-form" ></div>
       <!-- Modal -->
-      <div id="id01" class="modal">
-        <span onclick="document.getElementById('id01').style.display='none'"
-        class="close" title="Close Modal">&times;</span>
-        <!-- Modal Content -->
-        <form class="modal-content animate" action="/action_page.php">
-          <div class="container">
-            <label for="task_name"><b>タスク名</b></label>
-            <input type="text" placeholder="Enter task name" name="task_name" required>
 
-            <label for="deadline"><b>締め切り日時</b></label>
-            <input type="date" name="deadline_date" required>
-            <input type="time" name="deadline_time">
-
-            <label for="required_time"><b>かかる時間</b></label>
-            <input type="time" placeholder="Enter required time" name="required_time" required>
-
-            <label for="priority"><b>優先度</b></label>
-            <input type="text" placeholder=" ボタンに変更" name="priority" required>
-
-            <label for="color"><b>色</b></label>
-            <input type="color" id="task-color">
-
-            <label for="comment"><b>コメント</b></label>
-            <input type="text" placeholder="Enter comment" name="coment">
-
-
-
-            <button type="submit">追加</button>
-          </div>
-        </form>
-      </div>
     </div>
     <div class="calendar-container">
       <div id="calendar"></div>
