--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,15 +7,12 @@
 
 <p>
   <strong>締切日時:</strong>
-  <%= @task.deadline_date %>
-  <%= @task.deadline_time.hour %>
-  :<%= @task.deadline_time.min %>
+  <%= @task.deadline %>
 </p>
 
 <p>
   <strong>かかる時間:</strong>
-  <%= @task.required_time.hour %>
-  :<%= @task.required_time.min %>
+  <%= @task.required_time %>
 </p>
 
 <p>
