--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -30,12 +30,17 @@
     <div class="bgline"></div>
     <a href="<%= "/users/#{@current_user.id}" %>"><img class="logo" src="/img/logo-circle.png"></a>
     <div class="tooltip">
-      <button-top onclick="document.getElementById('id05').style.display='block'"><%= link_to 'タスク追加', new_task_path, remote: true %></button-top>
-      <div id="task-form"></div>
+      <button-top><%= link_to 'タスク追加', new_task_path, remote: true %></button-top>
+      <div id="id01" class="modal">
+        <span onclick="document.getElementById('id01').style.display='none'"
+        class="close" id="id01-close" title="Close Modal">&times;</span>
+        <div class="modal-content animate">
+          <div id="task-container" class="container"></div>
+        </div>
+      </div>
     </div>
     <div class="main-container">
       <h1>タスク一覧</h1>
-      <div id="task-form"></div>
       <table id="tsk" class="tablesorter">
         <thead>
           <tr>
